Fix Vercel output directory to browser subfolder

--- a/fullstack/FE/vercel.json
+++ b/fullstack/FE/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "npm run build:prod",
+  "outputDirectory": "dist/liveideconnect/browser",
   "rewrites": [
     {
       "source": "/(.*)",
